Business Process. WCMS Email. Create Questions Updates Cron Job

--- a/config/local.properties
+++ b/config/local.properties
@@ -3,3 +3,9 @@
 googleApiKey=
 multicountrysampledataaddon.import.active=false
 apiregistryservices.events.exporting=false
+
+mail.smtp.server=localhost
+mail.smtp.port=25
+
+mail.smtp.user=
+mail.smtp.password=
